fixing  the hamburger menu on mobile

--- a/src/output.css
+++ b/src/output.css
@@ -556,12 +556,8 @@ video {
   --tw-contain-style:  ;
 }
 
-.visible{
-  visibility: visible;
-}
-
-.m-8{
-  margin: 2rem;
+.absolute{
+  position: absolute;
 }
 
 .flex{
@@ -576,12 +572,12 @@ video {
   height: 1.5rem;
 }
 
-.h-1\/2{
-  height: 50%;
-}
-
 .w-8{
   width: 2rem;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .flex-row{
@@ -604,42 +600,20 @@ video {
   justify-content: space-between;
 }
 
-.object-contain{
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .p-4{
   padding: 1rem;
 }
 
-.p-5{
-  padding: 1.25rem;
+.pl-32{
+  padding-left: 8rem;
 }
 
-.pl-\[20\%\]{
-  padding-left: 20%;
-}
-
-.pt-20{
-  padding-top: 5rem;
+.pt-56{
+  padding-top: 14rem;
 }
 
 .font-outfit{
   font-family: Outfit, sans-serif;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-\[1\.5rem\]{
-  font-size: 1.5rem;
-}
-
-.text-\[1rem\]{
-  font-size: 1rem;
 }
 
 .text-2xl{
@@ -647,38 +621,57 @@ video {
   line-height: 2rem;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
 .font-semibold{
   font-weight: 600;
 }
 
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px){
+  .sm\:absolute{
+    position: absolute;
+  }
+}
+
 @media (min-width: 768px){
-  .md\:p-8{
-    padding: 2rem;
+  .md\:absolute{
+    position: absolute;
+  }
+
+  .md\:m-1{
+    margin: 0.25rem;
+  }
+
+  .md\:ml-\[20\%\]{
+    margin-left: 20%;
+  }
+
+  .md\:ml-2{
+    margin-left: 0.5rem;
+  }
+
+  .md\:ml-1{
+    margin-left: 0.25rem;
+  }
+
+  .md\:ml-\[\]{
+    margin-left: ;
+  }
+
+  .md\:ml-\[2\]{
+    margin-left: 2;
+  }
+
+  .md\:ml-\[20\]{
+    margin-left: 20;
   }
 
   .md\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
-  }
-
-  .md\:pl-\[40\%\]{
-    padding-left: 40%;
-  }
-
-  .md\:text-\[1\.5rem\]{
-    font-size: 1.5rem;
-  }
-
-  .md\:text-\[3rem\]{
-    font-size: 3rem;
-  }
-
-  .md\:text-\[2rem\]{
-    font-size: 2rem;
   }
 
   .md\:text-2xl{
@@ -693,8 +686,12 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:m-8{
-    margin: 2rem;
+  .lg\:absolute{
+    position: absolute;
+  }
+
+  .lg\:ml-0{
+    margin-left: 0px;
   }
 
   .lg\:flex{
@@ -705,28 +702,20 @@ video {
     display: none;
   }
 
-  .lg\:flex-col{
-    flex-direction: column;
-  }
-
   .lg\:p-6{
     padding: 1.5rem;
-  }
-
-  .lg\:p-12{
-    padding: 3rem;
   }
 
   .lg\:pl-\[40\%\]{
     padding-left: 40%;
   }
 
-  .lg\:text-\[1\.5rem\]{
-    font-size: 1.5rem;
+  .lg\:pl-\[88\%\]{
+    padding-left: 88%;
   }
 
-  .lg\:text-\[3rem\]{
-    font-size: 3rem;
+  .lg\:pt-14{
+    padding-top: 3.5rem;
   }
 
   .lg\:text-2xl{
@@ -737,6 +726,11 @@ video {
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .lg\:text-black{
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
   }
 }
 
